# VertexClustering

./: CMakeLists.txt  MemoryPool.h  Mesh.cpp  Mesh.h  Octree.cpp  Octree.h  ReadObj.h  ReadXYZ.h  VertexClustering.cpp  VertexClustering.h  WriteObj.h  main.cpp
